--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <div class="mainScreen">
         <div class="mainScreen__nav">
             <ul>
-                <li><img src="/assets/img/bongo.svg" alt="Bingo Bongo"></li>
+                <li><img src="/
+assets/img/bongo.svg" alt="Bingo Bongo"></li>
                 <li><a href="">О нас</a></li>
                 <li><a href="">Каталог</a></li>
                 <li><a href="">Популярные игры</a></li>
                 <li><a href="">Игра месяца</a></li>
                 <li><a href="">Игротека</a></li>
-                <li><img src="/assets/img/flower.svg" alt="flower"></li>
+                <li><img src="assets/img/flower.svg" alt="flower"></li>
             </ul>
             <ul>
                 <li><img src="assets/img/search.svg" alt="Поиск"></li>
