--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <div class="mainScreen">
         <div class="mainScreen__nav">
             <ul>
-                <li><img src="/
-assets/img/bongo.svg" alt="Bingo Bongo"></li>
+                <li><img src="assets/img/bongo.svg" alt="Bingo Bongo"></li>
                 <li><a href="">О нас</a></li>
                 <li><a href="">Каталог</a></li>
                 <li><a href="">Популярные игры</a></li>
