--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div class="games__items__item">
                 <div class="games__items__item__img">
                     <div class="rating">
-                        <img src="/assets/img/rating.svg" alt="Рейтинг">
+                        <img src="assets/img/rating.svg" alt="Рейтинг">
                         <div class="monthGame">
                             <span>Игра месяца</span>
                         </div>
@@ -247,7 +247,7 @@
             <div class="games__items__item">
                 <div class="games__items__item__img img">
                     <div class="rating">
-                        <img src="/assets/img/rating.svg" alt="Рейтинг">
+                        <img src="assets/img/rating.svg" alt="Рейтинг">
                     </div>
                 </div>
                 <div class="games__items__item__description">
@@ -262,7 +262,7 @@
             <div class="games__items__item">
                 <div class="games__items__item__img">
                     <div class="rating">
-                        <img src="/assets/img/rating.svg" alt="Рейтинг">
+                        <img src="assets/img/rating.svg" alt="Рейтинг">
                     </div>
                 </div>
                 <div class="games__items__item__description">
