--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                         </p>
                         <div class="sale__items__item__about__count">
                             <span> 
-                                Total 54 Items
+                                В корзину
                             </span>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                         </p>
                         <div class="sale__items__item__about__count">
                             <span> 
-                                Total 54 Items
+                                В корзину
                             </span>
                         </div>
                     </div>
@@ -217,7 +217,7 @@
                         </p>
                         <div class="sale__items__item__about__count">
                             <span> 
-                                Total 54 Items
+                                В корзину
                             </span>
                         </div>
                     </div>
